  (Florian Angeletti, review by Gabriel Scherer)

### Manual and documentation:

- #12868: Manual: simplify style colours of the post-processed manual and API
  HTML pages, and fix the search button icon
  (Yawar Amin, review by Simon Grondin, Gabriel Scherer, and Florian Angeletti)

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #12896: Tidy-up both the generating code and the output itself for C code
  being generated by the bytecode linker in `-custom` and `-output-*` modes.
  (David Allsopp and Antonin Décimo, review by ???)

### Build system:

### Bug fixes:


OCaml 5.2.0
------------

(Changes that can break existing programs are marked with a "*")

### Restored and new backends:

- #12276, #12601: native-code compilation for POWER (64 bits, little-endian)
  (Xavier Leroy, review by KC Sivaramakrishnan, Anil Madhavapeddy,
   and Stephen Dolan)

- #12667: extend the latter to POWER 64 bits, big-endian, ELFv2 ABI
  (A. Wilcox, review by Xavier Leroy)

### Language features:

- #12295, #12568: Give `while true' a polymorphic type, similarly to
  `assert false'
  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer,
  suggestion by Rodolphe Lepigre and John Whitington)

- #12315: Use type annotations from arguments in let rec
  (Stephen Dolan, review by Gabriel Scherer)

- #11252, RFC 27: Support raw identifier syntax \#foo
  (Stephen Dolan, review by David Allsopp, Gabriel Scherer and Olivier Nicole)

- #12044: Add local module open syntax for types.
  ```
    module A = struct
      type t = int
      type r = unit
      type s = string
    end

    type example = A.(t * r * s)
  ```
  (Alistair O'Brien, review by Gabriel Scherer, Nicolás Ojeda Bär
   and Florian Angeletti)

- #12456: Document the incompatibility between effects on the one
  hand, and `caml_callback` and asynchronous callbacks (signal
  handlers, finalisers, memprof callbacks...) on the other hand.