@@ -34,8 +34,10 @@ _______________
 
 ### Internal/compiler-libs changes:
 
-- #12896: Tidy-up both the generating code and the output itself for C code
-  being generated by the bytecode linker in `-custom` and `-output-*` modes.
+- #12896: Simplify the compilation of custom bytecode runtimes by explicitly
+  compiling the primitives file before calling the linker. Tidy-up both the
+  generating code and the output itself for C code being generated by the
+  bytecode linker in `-custom` and `-output-*` modes.
   (David Allsopp and Antonin Décimo, review by ???)
 
 ### Build system:
